unpackaged/main/default/objects/Xero_Invoice__c/Xero_Invoice__c.object-meta.xml
<CustomObject>
    <label>Invoice</label>
    <nameField>
        <displayFormat>XIN-{0000}</displayFormat>
        <label>Invoice Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>