unpackaged/main/default/objects/Xero_Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Xero_Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>