unpackaged/main/default/objects/Xero_Invoice__c/fields/Amount_Credited__c.field-meta.xml
<CustomField>
    <fullName>Amount_Credited__c</fullName>
    <label>Amount Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>