unpackaged/main/default/objects/Xero_Invoice__c/fields/Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid__c</fullName>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>