unpackaged/main/default/objects/Xero_Invoice__c/fields/fully_paid_on_date1__c.field-meta.xml
<CustomField>
    <fullName>fully_paid_on_date1__c</fullName>
    <label>fully paid on date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>