unpackaged/main/default/objects/Xero_Invoice__c/fields/Fully_Paid_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Fully_Paid_On_Date__c</fullName>
    <label>Fully Paid On Date</label>
    <type>Date</type>
</CustomField>