unpackaged/main/default/objects/Xero_Invoice__c/fields/Invoice_Batch_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Batch_Last_Update__c</fullName>
    <label>Invoice Batch Last Update</label>
    <type>DateTime</type>
</CustomField>