unpackaged/main/default/objects/Xero_Invoice__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <label>Invoice Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Authorised</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>