unpackaged/main/default/objects/Xero_Invoice__c/fields/Last_Invoice_Note__c.field-meta.xml
<CustomField>
    <fullName>Last_Invoice_Note__c</fullName>
    <label>Last Invoice Note</label>
    <type>DateTime</type>
</CustomField>