unpackaged/main/default/objects/Xero_Invoice__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Use Add Note button above to change the value of this field</description>
    <inlineHelpText>Use Add Note button above to change the value of this field</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>