unpackaged/main/default/objects/Xero_Invoice__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>