unpackaged/main/default/objects/Xero_Invoice__c/fields/Paylink_Status__c.field-meta.xml
<CustomField>
    <fullName>Paylink_Status__c</fullName>
    <label>Paylink Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>