unpackaged/main/default/objects/Xero_Invoice__c/fields/Paylink_URL__c.field-meta.xml
<CustomField>
    <fullName>Paylink_URL__c</fullName>
    <label>Paylink URL</label>
    <type>Url</type>
</CustomField>