unpackaged/main/default/objects/Xero_Invoice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Invoice_Number__c</columns>
    <columns>Invoice_Status__c</columns>
    <columns>Total__c</columns>
    <columns>Amount_Due__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>